List.of -> Arrays.asList